--- a/01.html
+++ b/01.html
@@ -13,6 +13,12 @@
     </style>
   </head>
   <body>
+  <pre>
+    <samp> GET	/home.html	HTTP/1.1 
+    Host:	www.example.org 
+  </samp>
+</pre>
+
     <div id="SomeElementYouWantToAnimate"></div>
     <h1>111</h1>
     <h1>111</h1>
